чутчут рефакторинг